# fss-mqtt-broker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  RELEASING.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
bench/: README.md  docker-compose.yml  run.sh  summarize.py
bench/configs/: mosquitto.conf
bench/tls/: gen-certs.sh
crates/mqtt-auth/: Cargo.toml
crates/mqtt-auth/fuzz/: Cargo.toml
crates/mqtt-auth/fuzz/fuzz_targets/: acl_parse.rs  crl_parse.rs
crates/mqtt-auth/fuzz/seeds/acl_parse/: valid.toml
crates/mqtt-auth/src/: acl.rs  basic.rs  chain.rs  enhanced.rs  lib.rs  mtls.rs  password.rs  signed_gossip.rs  token.rs
crates/mqtt-bridge/: Cargo.toml
crates/mqtt-bridge/src/: client.rs  config.rs  engine.rs  forward.rs  lib.rs  main.rs  metrics.rs  spool.rs
crates/mqtt-bridge/tests/: client.rs  engine.rs
crates/mqtt-cluster/: Cargo.toml
crates/mqtt-cluster/benches/: durable_hotpaths.rs
crates/mqtt-cluster/fuzz/: Cargo.toml
crates/mqtt-cluster/fuzz/fuzz_targets/: gossip_open.rs  peer_decode.rs  swim_message.rs
crates/mqtt-cluster/src/: cluster_log.rs  cluster_store.rs  decommission.rs  durable_node.rs  durable_plane.rs  hrw.rs  invariants.rs  lease.rs  lease_assign.rs  lease_group.rs  lease_membership.rs  lease_raft.rs  lease_store.rs  lib.rs  node_registry.rs  peer.rs  placement.rs  raft_mesh.rs  repl_net.rs  replay.rs  swim.rs  swim_auth.rs  swim_driver.rs
crates/mqtt-cluster/tests/: durable_sim.rs  swim_cluster.rs  swim_sim.rs
crates/mqtt-codec/: Cargo.toml
crates/mqtt-codec/benches/: codec.rs
crates/mqtt-codec/fuzz/: Cargo.toml
crates/mqtt-codec/fuzz/fuzz_targets/: packet_decode.rs
crates/mqtt-codec/src/: io.rs  lib.rs  packet.rs  properties.rs  reason.rs  varint.rs
crates/mqtt-codec/tests/: perf_gate.rs
crates/mqtt-config/: Cargo.toml
crates/mqtt-config/src/: lib.rs
crates/mqtt-core/: Cargo.toml
crates/mqtt-core/src/: lib.rs  shared.rs  subscriptions.rs
crates/mqtt-net/: Cargo.toml
crates/mqtt-net/src/: frame.rs  lib.rs  quic.rs  tls.rs  ws.rs
crates/mqtt-observability/: Cargo.toml
crates/mqtt-observability/src/: lib.rs  metrics.rs
crates/mqtt-storage/: Cargo.toml
crates/mqtt-storage/src/: app_props.rs  data_dir.rs  lib.rs  logged.rs  persistent_log.rs  persistent_retained.rs  repl.rs  retained_log.rs  schema.rs
crates/mqttd/: Cargo.toml
crates/mqttd/examples/: quic_demo.rs
crates/mqttd/src/: admission.rs  aliases.rs  clock.rs  cluster.rs  config_watch.rs  conn.rs  health.rs  hub.rs  lib.rs  main.rs  peer.rs  reload.rs  store_watch.rs
crates/mqttd/tests/: acl.rs  audit.rs  auth.rs  binary_smoke.rs  check_config.rs  cluster.rs  cluster_chaos.rs  cluster_proc.rs  cluster_soak.rs  cluster_stress.rs  cluster_upgrade.rs  config_watch.rs  decommission.rs  durable_sessions.rs  end_to_end.rs  keepalive_lwt.rs  peer_identity.rs  persistence.rs  protocol_violations.rs  qos1.rs  qos2.rs  quic.rs  quotas.rs  reload_acl.rs  reload_auth.rs  reload_tls.rs  resource_limits.rs  retained.rs  swim_routing.rs  tls.rs  v5_protocol.rs  ws.rs
crates/mqttd/tests/common/: mod.rs
crates/mqttd/tests/proc_common/: mod.rs
demo/: Dockerfile  Dockerfile.bridge  README.md  docker-compose.yml  durable.yml  scale-cluster.py
demo/alloy/: config.alloy
demo/bridge/: bridge.toml
demo/loadgen/: loadgen.sh
demo/playground/: entrypoint.sh  mosquitto.conf
demo/prometheus/: prometheus.yml
demo/quic/: gen-certs.sh
docs/: CAPABILITY-PLAN.md  CLUSTER-DURABILITY-PLAN.md  CONTRIBUTING-agent.md  TEST-PLAN.md  mqttd.example.toml
docs/adr/: 0001-session-durability.md  0002-transport-security.md  0003-gossip-authentication.md  0004-identity-and-authentication.md  0005-session-affinity.md  0006-consensus-and-replication.md  0007-durable-store-integration.md  0008-mqtt-5-codec.md  0009-mqtt5-expiry.md  0010-shared-subscriptions.md  0011-topic-aliases.md  0012-flow-control.md  0013-enhanced-authentication.md  0014-cross-node-retained.md  0015-cluster-shared-subscriptions.md  0016-swim-membership-stability.md  0017-durable-attach-readiness.md  0018-on-disk-persistence.md  0019-graceful-shutdown.md  0020-metrics-and-observability.md  0021-bounded-lease-voters.md  0022-signed-gossip.md  0023-gossip-anti-replay.md  0024-deterministic-testing.md  0025-boundary-bridge.md  0026-lease-timing-durable-storage.md  0027-replica-group-commit.md  0028-link-gated-voter-admission.md  0029-durable-by-default.md  0030-user-property-forwarding.md  0031-session-identity-binding.md  0032-hot-reloadable-security-policy.md  0033-config-file-watch-reload.md  0034-foreign-client-interop-conformance.md  0035-websocket-transport.md  0036-quic-transport.md  0037-durable-retained-messages.md  0038-prerelease-compatibility-freeze.md  0039-versioning-and-upgrade-policy.md  0040-revocation-reaches-live-state.md  (+11 more)
docs/benchmarks/: BASELINE.md
docs/delivery/: 0001-session-durability.md  0002-transport-security.md  0003-gossip-authentication.md  0004-identity-and-authentication.md  0005-session-affinity.md  0006-consensus-and-replication.md  0007-durable-store-integration.md  0008-mqtt-5-codec.md  0009-mqtt5-expiry.md  0010-shared-subscriptions.md  0011-topic-aliases.md  0012-flow-control.md  0013-enhanced-authentication.md  0014-cross-node-retained.md  0015-cluster-shared-subscriptions.md  0016-swim-membership-stability.md  0017-durable-attach-readiness.md  0018-on-disk-persistence.md  0019-graceful-shutdown.md  0020-metrics-and-observability.md  0021-bounded-lease-voters.md  0022-signed-gossip.md  0023-gossip-anti-replay.md  0024-deterministic-testing.md  0025-boundary-bridge.md  0026-lease-timing-durable-storage.md  0027-replica-group-commit.md  0028-link-gated-voter-admission.md  0029-durable-by-default.md  0030-user-property-forwarding.md  0031-session-identity-binding.md  0032-hot-reloadable-security-policy.md  0033-config-file-watch-reload.md  0034-foreign-client-interop-conformance.md  0035-websocket-transport.md  0036-quic-transport.md  (+16 more)
scripts/: gen-status.py  quickstart-smoke.sh
(+22 files in other folders)
