[workspace]
resolver = "2"
members = [
    "crates/mqtt-codec",
    "crates/mqtt-core",
    "crates/mqtt-net",
    "crates/mqtt-auth",
    "crates/mqtt-storage",
    "crates/mqtt-cluster",
    "crates/mqtt-observability",
    "crates/mqtt-config",
    "crates/mqttd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/TODO/mqtt-broker"
authors = ["mqtt-broker contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# allow a few pedantic lints that are noisy for early-stage scaffolding
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
# error handling
thiserror = "1"
# bytes for zero-copy wire buffers
bytes = "1"
# tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# config
serde = { version = "1", features = ["derive"] }
# TLS (ADR 0002): pure-Rust rustls, ring provider, TLS 1.3 only (no tls12 feature)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rustls-pki-types = "1"
# test-only PKI: integration tests mint throwaway CAs instead of skipping verification
rcgen = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
