[workspace]
resolver = "2"
members = [
    "crates/mqtt-codec",
    "crates/mqtt-core",
    "crates/mqtt-net",
    "crates/mqtt-auth",
    "crates/mqtt-storage",
    "crates/mqtt-cluster",
    "crates/mqtt-observability",
    "crates/mqtt-config",
    "crates/mqttd",
    "crates/mqtt-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Raised from 1.75 by the OTLP/HTTP metric exporter (ADR 0020 T9): the OpenTelemetry
# SDK + reqwest stack requires Rust 1.85.
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/mbilling/fss-mqtt-broker"
authors = ["mqtt-broker contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# allow a few pedantic lints that are noisy for early-stage scaffolding
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
# error handling
thiserror = "1"
# bytes for zero-copy wire buffers
bytes = "1"
# tracing / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# config
serde = { version = "1", features = ["derive"] }
# gossip-datagram HMAC (ADR 0003); already in-tree as the rustls crypto provider
ring = "0.17"
# X.509 parsing for mTLS identity extraction (ADR 0004)
x509-parser = "0.16"
# ACL policy files (ADR 0004 step 3)
toml = "0.8"
# password hashing (ADR 0004 step 6): Argon2id, no fast hashes
argon2 = "0.5"
# JWT bearer-token verification (ADR 0004 step 6)
jsonwebtoken = "9"
serde_json = "1"
# TLS (ADR 0002): pure-Rust rustls, ring provider, TLS 1.3 only (no tls12 feature)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging"] }
rustls-pki-types = "1"
# test-only PKI: integration tests mint throwaway CAs instead of skipping verification
rcgen = "0.13"
# WebSocket transport (ADR 0035): the HTTP Upgrade handshake + WS frame codec only — TLS is
# done by our own rustls (no tungstenite TLS feature), so there is one TLS stack in the broker.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
# Stream/Sink adapters for the WebSocket byte-stream shim (already in-tree transitively).
futures-util = "0.3"
# QUIC transport (ADR 0036): MQTT-over-QUIC. Pinned to the `ring` rustls provider (no aws-lc),
# matching the rest of the broker; already in-tree transitively on our rustls 0.23.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
# Micro-benchmarks (ADR 0044 P6): dev-only, statistical timing of the hot paths.
criterion = "0.5"

# Test/dev builds keep file:line panic locations but drop full debuginfo:
# the workspace's ~30 integration-test binaries at debug=2 exceed 20 GiB of
# target/ churn per rebuild, which exhausts CI/dev disk for no diagnostic
# gain (failures are diagnosed from logs + file:line backtraces).
[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
