[package]
name = "mqtt-auth"
description = "Authentication and authorization traits and built-in providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mqtt-core = { path = "../mqtt-core", version = "0.9.0" }
thiserror.workspace = true
# `verify` enables x509 signature verification (the chain-check for signed gossip,
# ADR 0022); it uses `ring`, already in the tree — no new dependency.
x509-parser = { workspace = true, features = ["verify"] }
serde.workspace = true
toml.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
ring = { workspace = true }

[dev-dependencies]
rcgen.workspace = true

[lints]
workspace = true
