[package]
name = "mqtt-cluster"
description = "Shared-nothing cluster: gossip membership, subscription routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mqtt-core = { path = "../mqtt-core", version = "0.9.0" }
mqtt-storage = { path = "../mqtt-storage", version = "0.9.0" }
thiserror.workspace = true
serde = { workspace = true }
bincode = "1"
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }
async-trait = "0.1"
openraft = { version = "0.9.24", features = ["serde"] }
# On-disk persistence for the lease consensus store (ADR 0018 phase 2).
redb = "2"

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "durable_hotpaths"
harness = false

[lints]
workspace = true
