[package]
name = "mqtt-codec"
description = "MQTT 3.1.1 and 5.0 wire protocol encoding/decoding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "codec"
harness = false
