[package]
name = "mqtt-config"
description = "Typed configuration loading and validation with secure defaults"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
