[package]
name = "mqtt-observability"
description = "Metrics, tracing, and a tamper-evident audit log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
prometheus-client = "0.22"
tracing.workspace = true

[lints]
workspace = true
