[package]
name = "mqtt-observability"
description = "Metrics, tracing, and a tamper-evident audit log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opentelemetry = "0.32.0"
# OTLP/HTTP export (ADR 0020 T9). Blocking reqwest client: the SDK PeriodicReader pushes
# from its own dedicated thread (no Tokio reactor), so the async client cannot run there.
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "metrics"] }
prometheus-client = "0.22"
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
