[package]
name = "mqttd"
description = "The MQTT broker server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mqttd"
path = "src/main.rs"

[dependencies]
mqtt-codec = { path = "../mqtt-codec", version = "0.1.0" }
mqtt-core = { path = "../mqtt-core", version = "0.1.0" }
mqtt-net = { path = "../mqtt-net", version = "0.1.0" }
mqtt-auth = { path = "../mqtt-auth", version = "0.1.0" }
mqtt-storage = { path = "../mqtt-storage", version = "0.1.0" }
mqtt-cluster = { path = "../mqtt-cluster", version = "0.1.0" }
mqtt-observability = { path = "../mqtt-observability", version = "0.1.0" }
mqtt-config = { path = "../mqtt-config", version = "0.1.0" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
rcgen.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
# `test-util` enables tokio's paused-clock test helpers (start_paused) for the
# time-based session-expiry tests (ADR 0009).
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
