[package]
name = "mqttd"
description = "The MQTT broker server binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mqttd"
path = "src/main.rs"

[dependencies]
mqtt-codec = { path = "../mqtt-codec", version = "0.1.0" }
mqtt-core = { path = "../mqtt-core", version = "0.1.0" }
mqtt-net = { path = "../mqtt-net", version = "0.1.0" }
mqtt-auth = { path = "../mqtt-auth", version = "0.1.0" }
mqtt-storage = { path = "../mqtt-storage", version = "0.1.0" }
mqtt-cluster = { path = "../mqtt-cluster", version = "0.1.0" }
mqtt-observability = { path = "../mqtt-observability", version = "0.1.0" }
mqtt-config = { path = "../mqtt-config", version = "0.1.0" }

tokio.workspace = true
# CancellationToken + TaskTracker for graceful shutdown (ADR 0019)
tokio-util = { version = "0.7", features = ["rt"] }
# QUIC client listener (ADR 0036): the accept loop drives quinn Endpoint/Connection directly.
quinn.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
tokio-rustls.workspace = true

[dev-dependencies]
# fault-injecting SessionStore double for the durable-attach readiness tests (ADR 0017)
async-trait = "0.1"
# Argon2id PHC hashing to forge rotated password files in the auth hot-reload test
# (ADR 0032 T5). Already in the tree via mqtt-auth — not a new supply-chain crate.
argon2.workspace = true
# WebSocket client for the MQTT-over-WS transport tests (ADR 0035). Same crate the broker
# uses for the server side — no new supply-chain surface.
tokio-tungstenite.workspace = true
rcgen.workspace = true
ring = { workspace = true }
rustls.workspace = true
rustls-pki-types.workspace = true
# `test-util` enables tokio's paused-clock test helpers (start_paused) for the
# time-based session-expiry tests (ADR 0009).
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
