# Fuzz harness for the MQTT codec — the broker's untrusted-input boundary.
# Requires nightly + cargo-fuzz:  cargo install cargo-fuzz
# Run:                            cargo +nightly fuzz run packet_decode
#
# The empty [workspace] table detaches this crate from the parent workspace so
# the stable build/CI never tries to compile the nightly-only libfuzzer harness.
[package]
name = "mqtt-codec-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1"
mqtt-codec = { path = ".." }

[[bin]]
name = "packet_decode"
path = "fuzz_targets/packet_decode.rs"
test = false
doc = false
bench = false

[workspace]
